--- a/test.html
+++ b/test.html
@@ -1,1 +1,9 @@
 <!DOCTYPE html>
+<html>
+    <head>
+        <title>TITLE</title>
+    </head>
+    <body>
+        <p>First Paragraph</p>
+    </body>
+</html>
