--- a/test.html
+++ b/test.html
@@ -4,7 +4,7 @@
         <title>TITLE</title>
     </head>
     <body>
-        <p>First Paragraph!!!!!!!!!!!!</p>
+        <p>First Paragraph</p>
         <p>Second Paragraph</p>
         <p>Third Paragraph</p>
         <p>Fourth Paragraph</p>
